# gPlat

./: .gitignore  CLAUDE.md  Makefile  README.md  create tag.txt  gPlat.sln  gPlature.sln  nginx.conf
.devcontainer/: README.md
CMakeProject1/: CMakeLists.txt
CMakeProject2/: CMakeLists.txt
Doc/: ARCHITECTURE.md  CONTRIBUTING.md  PRODUCT.md  add_message_type.md  api_function.template.cpp  api_reference.md  command.txt  instruction.md  message_handler.template.cpp
Project1/: Project1.vcxproj
TestApplication/: README.md  TestApplication.vcxproj  main.cpp  threadfunction.cpp
config/: gplat.conf
createb/: createb.vcxproj  main.cpp
createq/: createq.vcxproj  main.cpp
createtag/: createtag.vcxproj  main.cpp
dotNetConsoleApp1/: Program.cs  dotNetConsoleApp1.csproj
gPlature/: gPlature.cpp  gPlature.vcxproj
gPlatureServer/: gPlatureServer.vcxproj  gPlatureServer.vcxproj.filters  main.cpp  nginx.cxx  ngx_c_conf.cpp  ngx_c_socket.cxx  ngx_c_socket.h  ngx_c_socket_conn.cxx  ngx_c_socket_inet.cxx  ngx_c_socket_request.cxx  ngx_log.cxx  ngx_setproctitle.cpp  ngx_string.cpp  笔记.docx
gplat/: CMakeLists.txt  CSubscribe.cpp  CSubscribe.h  gplat.vcxproj  gplat.vcxproj.filters  nginx.cxx  ngx_c_conf.cxx  ngx_c_conf.h  ngx_c_crc32.cxx  ngx_c_crc32.h  ngx_c_lockmutex.h  ngx_c_memory.cxx  ngx_c_memory.h  ngx_c_slogic.cxx  ngx_c_slogic.h  ngx_c_socket.cxx  ngx_c_socket.h  ngx_c_socket_accept.cxx  ngx_c_socket_conn.cxx  ngx_c_socket_inet.cxx  ngx_c_socket_request.cxx  ngx_c_threadpool.cxx  ngx_c_threadpool.h  ngx_comm.h  ngx_daemon.cxx  ngx_event.cxx  ngx_func.h  ngx_global.h  ngx_log.cxx  ngx_logiccomm.h  ngx_macro.h  ngx_printf.cxx  ngx_process_cycle.cxx  ngx_setproctitle.cxx  ngx_signal.cxx  ngx_string.cxx  笔记.docx
higplat/: README.md  higplat.cpp  higplat.vcxproj  qbd.h  远程生成后事件.txt
include/: TimerManager.h  hello.cpp  hello.h  higplat.h  higplat_linux.h  include.vcxproj  main.cpp  msg.h  qbdtype.h  struct_reflect.h  struct_registry.h  timer_manager.h  type_code.h  user_types.h
qbdfile/: BOARD
s7ioserver/: main.cpp  s7config.cpp  s7config.h  s7ioserver.ini  s7ioserver.vcxproj  threadReadPlc.cpp  threadWritePlc.cpp  threadfunction.cpp
snap7/: snap7.vcxproj  snap7.vcxproj.filters
snap7.demo.cpp/: snap7.demo.cpp.vcxproj
sometest/: main.cpp  sometest.vcxproj
test/: ipc_test.cpp
testapp/: testapp.vcxproj  threadfunction.cpp
testapp2/: testapp2.vcxproj
testapp3/: assessment.md  (+4 more)
(+45 files in other folders)
